--- a/index.html
+++ b/index.html
@@ -41,14 +41,10 @@
           </div>
 
           <hr />
-
-          <div class="row forecast-today"></div>
-
-          <div class="row forecast-5-day"></div>
         </div>
       </div>
 
-      <div class="row justify-content-center">
+      <div class="row justify-content-center forecast-today" id="day-1">
         <div class="col-md-2">
           <h3 class="text-center">72°</h3>
           <h4 class="text-center">Springfield</h4>
@@ -61,16 +57,50 @@
           />
         </div>
       </div>
-      <div class="row justify-content-center">
-        <div class="col-md-2">
-          <h3 class="text-center">DAY 1</h3>
+      <div class="row justify-content-center forecast-5-day">
+        <div class="col-md-2 container-fluid" id="day-2">
+          <div class="day-container">
+            <p class="text-center">Clouds</p>
+            <p class="text-center"><strong>73°</strong></p>
+            <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
+            <p class="text-center">Weekday</p>
+          </div>
         </div>
 
-        <div class="col-md-2">
-          <img
-            src="https://openweathermap.org/img/wn/10d@2x.png"
-            alt="unable to load image"
-          />
+        <div class="col-md-2 container-fluid" id="day-3">
+          <div class="day-container">
+            <p class="text-center">Clouds</p>
+            <p class="text-center"><strong>73°</strong></p>
+            <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
+            <p class="text-center">Weekday</p>
+          </div>
+        </div>
+
+        <div class="col-md-2 container-fluid" id="day-4">
+          <div class="day-container">
+            <p class="text-center">Clouds</p>
+            <p class="text-center"><strong>73°</strong></p>
+            <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
+            <p class="text-center">Weekday</p>
+          </div>
+        </div>
+
+        <div class="col-md-2 container-fluid" id="day-5">
+          <div class="day-container">
+            <p class="text-center">Clouds</p>
+            <p class="text-center"><strong>73°</strong></p>
+            <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
+            <p class="text-center">Weekday</p>
+          </div>
+        </div>
+
+        <div class="col-md-2 container-fluid" id="day-6">
+          <div class="day-container">
+            <p class="text-center">Clouds</p>
+            <p class="text-center"><strong>73°</strong></p>
+            <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
+            <p class="text-center">Weekday</p>
+          </div>
         </div>
       </div>
     </div>
