Continue formatting the forecast tempate in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row justify-content-center">
         <div class="page-header">
           <h1>Weather Project</h1>
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <div class="row justify-content-center forecast-today" id="day-1">
+      <div class="row justify-content-center forecast-today" id="now">
         <div class="col-md-2">
           <h3 class="text-center">72°</h3>
           <h4 class="text-center">Springfield</h4>
@@ -57,49 +57,75 @@
           />
         </div>
       </div>
+
       <div class="row justify-content-center forecast-5-day">
+        <div class="col-md-2 container-fluid" id="day-1">
+          <div class="day-container justify-content-center">
+            <p class="text-center">
+              <span class="text-center">Weather</span>
+              <br />
+              <span class="text-center"><strong>72°</strong></span>
+              <br />
+              <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
+              <br />
+              <span>Day 1</span>
+            </p>
+          </div>
+        </div>
+
         <div class="col-md-2 container-fluid" id="day-2">
-          <div class="day-container">
-            <p class="text-center">Clouds</p>
-            <p class="text-center"><strong>73°</strong></p>
-            <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
-            <p class="text-center">Weekday</p>
+          <div class="day-container justify-content-center">
+            <p class="text-center">
+              <span class="text-center">Weather</span>
+              <br />
+              <span class="text-center"><strong>72°</strong></span>
+              <br />
+              <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
+              <br />
+              <span>Day 2</span>
+            </p>
           </div>
         </div>
 
         <div class="col-md-2 container-fluid" id="day-3">
-          <div class="day-container">
-            <p class="text-center">Clouds</p>
-            <p class="text-center"><strong>73°</strong></p>
-            <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
-            <p class="text-center">Weekday</p>
+          <div class="day-container justify-content-center">
+            <p class="text-center">
+              <span class="text-center">Weather</span>
+              <br />
+              <span class="text-center"><strong>72°</strong></span>
+              <br />
+              <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
+              <br />
+              <span>Day 3</span>
+            </p>
           </div>
         </div>
 
         <div class="col-md-2 container-fluid" id="day-4">
-          <div class="day-container">
-            <p class="text-center">Clouds</p>
-            <p class="text-center"><strong>73°</strong></p>
-            <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
-            <p class="text-center">Weekday</p>
+          <div class="day-container justify-content-center">
+            <p class="text-center">
+              <span class="text-center">Weather</span>
+              <br />
+              <span class="text-center"><strong>72°</strong></span>
+              <br />
+              <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
+              <br />
+              <span>Day 4</span>
+            </p>
           </div>
         </div>
 
         <div class="col-md-2 container-fluid" id="day-5">
-          <div class="day-container">
-            <p class="text-center">Clouds</p>
-            <p class="text-center"><strong>73°</strong></p>
-            <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
-            <p class="text-center">Weekday</p>
-          </div>
-        </div>
-
-        <div class="col-md-2 container-fluid" id="day-6">
-          <div class="day-container">
-            <p class="text-center">Clouds</p>
-            <p class="text-center"><strong>73°</strong></p>
-            <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
-            <p class="text-center">Weekday</p>
+          <div class="day-container justify-content-center">
+            <p class="text-center">
+              <span class="text-center">Weather</span>
+              <br />
+              <span class="text-center"><strong>72°</strong></span>
+              <br />
+              <img src="https://openweathermap.org/img/wn/03d@2x.png" alt="" />
+              <br />
+              <span>Day 5</span>
+            </p>
           </div>
         </div>
       </div>
