Current Weather data fetch function is working.

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
             <input
               type="text"
               class="form-control"
-              placeholder="City"
-              aria-label="City"
-              aria-describedby="basic-addon2"
+              id="query"
+              placeholder="City, State, Country"
             />
             <div class="input-group-append">
-              <button class="btn btn-primary" type="button">Search</button>
+              <button class="btn btn-primary search" type="button">
+                Search
+              </button>
             </div>
           </div>
 
