--- a/index.html
+++ b/index.html
@@ -132,6 +132,6 @@
       </div>
     </div>
 
-    <script src="main.js" type="text/javascript"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
